--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,22 @@
-babel
+alembic==1.4.3
+Babel==2.9.0
+certifi==2020.11.8
+click==7.1.2
+Flask==1.1.2
+Flask-Migrate==2.5.3
+Flask-Moment==0.10.0
+Flask-SQLAlchemy==2.4.4
+Flask-WTF==0.14.3
+itsdangerous==1.1.0
+Jinja2==2.11.2
+Mako==1.1.3
+MarkupSafe==1.1.1
+psycopg2==2.8.6
 python-dateutil==2.6.0
-flask
-flask-moment
-flask-wtf
-wtforms
-sqlalchemy
+python-editor==1.0.4
+pytz==2020.4
+six==1.15.0
+SQLAlchemy==1.3.20
+Werkzeug==1.0.1
+wincertstore==0.2
+WTForms==2.3.3
